# EcoNetHumanoidEcoCore

EcoNetCentralAZv1/src/: CEIMRunner.cpp
EcoNetHumanoidEcoCore/: CMakeLists.txt
include/: HumanoidImpactModel.hpp  HumanoidNode.hpp
qpudatashards/particles/: ArizonaGilaLakePleasantWaterQuality2024-2026v1.csv  CES2026HumanoidRoboticsEcoSafev1.csv  EcoNetCentralAZKarmaWindowTemplate.csv  KarmaToleranceIdentities2026v1.csv
src/: HumanoidImpactModel.cpp  main_example.cpp
